--- a/web/themes/custom/girchi/templates/forms/form--user-form.html.twig
+++ b/web/themes/custom/girchi/templates/forms/form--user-form.html.twig
@@ -62,13 +62,9 @@
                             <label class="form-label" for="address">{{ "Address" | t }}</label>
                             {{ element.field_address }}
                         </div>
-                        <div class="form-group mb-2">
-                            <label class="form-label" for="address">{{ "Region" | t }}</label>
-                            {{ element.field_region }}
-                        </div>
                         <div class="form-group mb-2 yle">
                             <label class="form-label" for="last-name"
-                            >ქალაქი / რაიონი</label
+                            >{{ "Region" | t }}</label
                             >
                             <select
                                 name="country"
