--- a/web/themes/custom/girchi/templates/forms/form--user-form.html.twig
+++ b/web/themes/custom/girchi/templates/forms/form--user-form.html.twig
@@ -153,7 +153,7 @@
                                      {% endif %}
                                 >
                                     <i
-                                        class="icon-badge icon-badge-lg {{ appearance_data.earned_badge == true ? badge.logo_name[badge.name] : badge.logo_name[badge.name] ~'-disabled' }} "
+                                        class="icon-badge icon-badge-lg {{ appearance_data.earned_badge == true ? badge.icon : badge.icon ~'-disabled' }} "
                                     ></i>
                                     <div class="user-badge-text">
                                         <span class="user-badge-status"> {{ badge.name }} </span>
