Fill screen with background on users page.

--- a/web/themes/custom/girchi/templates/views/views-view--users.html.twig
+++ b/web/themes/custom/girchi/templates/views/views-view--users.html.twig
@@ -50,7 +50,7 @@
 
     {{ exposed }}
     {{ attachment_before }}
-    <div class="jumbotron bg-gradient-green rounded-none pt-3 pt-md-5">
+    <div class="jumbotron bg-gradient-green rounded-none pt-3 pt-md-5 full-width">
         <div class="container">
             <div class="row">
                 <div class="pb-5 w-100">
