--- a/web/themes/custom/girchi/css/custom.css
+++ b/web/themes/custom/girchi/css/custom.css
@@ -196,3 +196,12 @@ input[type=number]::-webkit-outer-spin-button {
 #views-exposed-form-users-page-1{
     display: none;
 }
+
+.full-width {
+    width: 100vw;
+    position: relative;
+    left: 50%;
+    right: 50%;
+    margin-left: -50vw;
+    margin-right: -50vw;
+}
