--- a/web/themes/custom/girchi/templates/forms/form--user-form.html.twig
+++ b/web/themes/custom/girchi/templates/forms/form--user-form.html.twig
@@ -62,7 +62,7 @@
                             <label class="form-label" for="address">{{ "Address" | t }}</label>
                             {{ element.field_address }}
                         </div>
-                        <div class="form-group mb-2 yle">
+                        <div class="form-group mb-2">
                             <label class="form-label" for="last-name"
                             >{{ "Region" | t }}</label
                             >
