--- a/web/themes/custom/girchi/css/custom.css
+++ b/web/themes/custom/girchi/css/custom.css
@@ -205,3 +205,7 @@ input[type=number]::-webkit-outer-spin-button {
     margin-left: -50vw;
     margin-right: -50vw;
 }
+
+#country_chosen {
+    display:none!important;
+}
