--- a/web/themes/custom/girchi/templates/header.htlm.twig
+++ b/web/themes/custom/girchi/templates/header.htlm.twig
@@ -54,6 +54,14 @@
                 >
             </a>
 
+            <a
+                href="#"
+                class="btn mr-auto ml-4 px-3 d-none d-lg-inline-flex btn-warning btn-with-icon  align-items-center text-uppercase"
+            >
+                <i class="icon-girchi-logo font-size-5 mr-2"></i>
+                <span class="font-size-4">{{"Election 2020"|t}}</span>
+            </a>
+
 
             <button
                     class="navbar-toggler"
@@ -217,3 +225,10 @@
     </div>
 </header>
 <!-- End of header -->
+<a
+    href="/election-promo.html"
+    class="d-lg-none text-decoration-none py-2 bg-warning text-uppercase text-white font-weight-bold d-flex justify-content-center align-items-center"
+>
+    <i class="icon-girchi-logo navbar-brand-lg mr-3 font-size-8"></i>
+    <span class="font-size-4">არჩევნები 2020</span>
+</a>
