--- a/web/themes/custom/girchi/templates/pages/page-election-2020.html.twig
+++ b/web/themes/custom/girchi/templates/pages/page-election-2020.html.twig
@@ -1,3 +1,4 @@
+{{ drupal_dump(politicians) }}
 <div class="election-sticky-navbar">
     <!-- Start of header -->
     <header class="bg-gradient-green">
