Create election page.

--- a/web/themes/custom/girchi/templates/header.htlm.twig
+++ b/web/themes/custom/girchi/templates/header.htlm.twig
@@ -55,11 +55,11 @@
             </a>
 
             <a
-                href="#"
+                href="{{ path('girchi_utils.election_2020') }}"
                 class="btn mr-auto ml-4 px-3 d-none d-lg-inline-flex btn-warning btn-with-icon  align-items-center text-uppercase"
             >
                 <i class="icon-girchi-logo font-size-5 mr-2"></i>
-                <span class="font-size-4">{{"Election 2020"|t}}</span>
+                <span class="font-size-4">არჩევნები 2020</span>
             </a>
 
 
