--- a/web/themes/custom/girchi/css/custom.css
+++ b/web/themes/custom/girchi/css/custom.css
@@ -209,3 +209,8 @@ input[type=number]::-webkit-outer-spin-button {
 #country_chosen {
     display:none!important;
 }
+
+#inputElectionDonate {
+    font-size: 0.8em
+;
+}
