--- a/web/themes/custom/girchi/templates/forms/form--user-form.html.twig
+++ b/web/themes/custom/girchi/templates/forms/form--user-form.html.twig
@@ -302,6 +302,10 @@
                                         {{ element.field_twitter_url }}
                                     </div>
                                     <div class="form-group mb-2">
+                                        <label class="form-label" for="email">{{ "Instagram" | t }}</label>
+                                        {{ element.field_instagram_url }}
+                                    </div>
+                                    <div class="form-group mb-2">
                                         <label class="form-label" for="address">{{ "Email" | t }}</label>
                                         {{ element.field_public_email }}
                                     </div>
