Add basic styles for errors and registrator field. refs #706

--- a/web/themes/custom/girchi/templates/pages/page--rs.html.twig
+++ b/web/themes/custom/girchi/templates/pages/page--rs.html.twig
@@ -24,6 +24,11 @@
 
     .form-wrapper {
         justify-content: center;
+        flex-flow: column;
+    }
+
+    .form-wrapper .alert ul {
+        margin-bottom: 0;
     }
 
     form {
@@ -32,6 +37,10 @@
         flex-flow: column;
     }
 
+    .registrator-box {
+        border-bottom: 1px dotted black;
+        margin-bottom: 15px;
+    }
 </style>
 
 {% if page.content %}
