Add team and total registration labels in registrator box. refs #706

--- a/web/themes/custom/girchi/templates/pages/page--rs.html.twig
+++ b/web/themes/custom/girchi/templates/pages/page--rs.html.twig
@@ -2,7 +2,7 @@
     input {
         width: 100%;
         margin: 0;
-        padding: 0;
+        padding: 5px;
     }
 
     .form-text {
@@ -16,6 +16,7 @@
 
     .rs-form-wrapper {
         justify-content: center;
+        padding: 20px 50px;
     }
 
     .logo-wrapper {
@@ -40,6 +41,18 @@
     .registrator-box {
         border-bottom: 1px dotted black;
         margin-bottom: 15px;
+        text-align: center;
+        line-height: 37px;
+    }
+
+    .registrator-box .registrator-name,
+    .registrator-box .team {
+        color: #0a6eb4;
+    }
+
+    .registrator-box .total-registrations {
+        color: #0daeee;
+        font-size: 28px;
     }
 </style>
 
