--- a/web/themes/custom/girchi/templates/pages/page--rs.html.twig
+++ b/web/themes/custom/girchi/templates/pages/page--rs.html.twig
@@ -43,6 +43,7 @@
         margin-bottom: 15px;
         text-align: center;
         line-height: 37px;
+        padding-bottom: 10px;
     }
 
     .registrator-box .registrator-name,
