Create initial version of bot notification block. refs #729

--- a/web/themes/custom/girchi/templates/header.htlm.twig
+++ b/web/themes/custom/girchi/templates/header.htlm.twig
@@ -1,3 +1,5 @@
+{{ drupal_block('girchi_chatbot_integration_bot_integration_message') }}
+
 {# Start of GeD Progress #}
 <div class="progress ged-progress d-none d-lg-flex">
     <div
