--- a/web/themes/custom/girchi/templates/pages/page-election-2020.html.twig
+++ b/web/themes/custom/girchi/templates/pages/page-election-2020.html.twig
@@ -126,7 +126,7 @@
                 <h4
                     class="line-height-1-3 line-height-md-1-0 font-size-7 font-size-md-9 text-white text-uppercase font-weight-bold d-flex align-items-center"
                     id="reason">
-                    მეტი ფული ხალხს
+                    გირჩი პარლამენტში
                 </h4>
             </div>
         </div>
@@ -140,21 +140,27 @@
         <div class="row">
             <div class="col-lg-7">
                 <h6 class="text-uppercase font-weight-bold my-3" >
-                    ახალი საარჩევნო მიზნის სათაური
+                    გირჩის დესანტი პარლამენტში
                 </h6>
                 <div class="font-size-2 text-grey mb-4 mb-lg-0">
                     <p>
-                        ჩვენ ქვემორე ხელის მომწერნი საჯაროდ და საქვეყნოდ ვაცხადებთ რომ
-                        თბილისის საქალაქო სასამართლოს მოსამართლე ნათია მერაბიშვილის და
-                        თბილისის სახელმწიფო უნივერსიტეტის ლექტორის გიორგი გორაშვილის
-                        დედას შევეცით!
+                        გირჩი 5 წელია არსებობს.
+                        ამ 5 წლის მანძილზე, ყოველგვარი თანამდებობების გარეშე, უამრავი რამის შეცვლა მოვახერხეთ.
+                        მოვახერხეთ მხოლოდ ლაპარაკით და იმ პრინციპების მიხედვით მოქმედებით, რომლებისაც გვჯეროდა და გვჯერა.
+                        შევცვალეთ 30 000+ წვევამდელის ცხოვრება.
                     </p>
                     <p>
-                        ჩვენ ქვემორე ხელის მომწერნი საჯაროდ და საქვეყნოდ ვაცხადებთ რომ
-                        თბილისის საქალაქო სასამართლოს მოსამართლე ნათია მერაბიშვილის და
-                        თბილისის სახელმწიფო უნივერსიტეტის ლექტორის გიორგი გორაშვილის
-                        დედას შევეცით!
+                        შევცვალეთ ასობით ათასი ახალგაზრდის ცხოვრება, რომელსაც ყოველ წელს კრიმპოლი მოსაფსმევინებლად დასდევდა.
+                        შევცვალეთ ის, თუ როგორ კეთდება პოლიტიკა ქვეყანაში, რას ლაპარაკობენ პოლიტიკოსები და რაზე ფიქრობენ ადამიანები!
+                        უამრავი რამის შეცვლა კი ვერ მოვახერხეთ, რადგან მთავრობაში მყოფ ამორალურ ადამიანებს ჩვენი დაიგნორების ფუფუნება ჰქონდათ.
+                        წელს გვაქვს უნიკალური შესაძლებლობა, გირჩის დესანტი პარლამენტში გადავსხათ!
+                        გვაქვს შესაძლებლობა, რომ ვეღარ გვაიგნორებდნენ და ჩვენი ხმა ბევრად უფრო ფართო აუდიტორიას მისწვდეს.
                     </p>
+                    <p>
+                        თუ დაფიქრდებით - ჩვენი იქ ყოფნა პირადად თქვენს ინტერესებშია, იმისდა მიუხედავად, მოგწონთ თუ არა ყველაფერი, რასაც ვაკეთებთ.
+                        ჰოდა, თუ თქვენსავე ინტერესებშია, ველოდებით, რომ შესაბამისადაც იმოქმედებთ. მხოლოდ მოქმედებაში, კონკრეტულ საქმეებში გამოიხატება ის, თუ მართლა რისი გჯერათ და რა გინდათ.
+                    </p>
+                    <strong>#გირჩიპარლამენტში პირადად თქვენთვის!</strong>
                 </div>
             </div>
             <div class="col-lg-5" id="politicians">
@@ -332,3 +338,6 @@
         </div>
     </div>
 </div>
+{% block page_foot %}
+    {% include '@girchi/footer.html.twig' %}
+{% endblock %}
