Add Tesla banner on every page.

--- a/web/themes/custom/girchi/templates/header.htlm.twig
+++ b/web/themes/custom/girchi/templates/header.htlm.twig
@@ -56,10 +56,17 @@
 
             <a
                 href="{{ path('girchi_utils.election_2020') }}"
-                class="btn mr-auto ml-4 px-3 d-none d-lg-inline-flex btn-warning btn-with-icon  align-items-center text-uppercase"
+                class="btn ml-4 px-3 d-none d-lg-inline-flex btn-warning btn-with-icon  align-items-center text-uppercase"
             >
                 <i class="icon-girchi-logo font-size-5 mr-2"></i>
                 <span class="font-size-4">არჩევნები 2020</span>
+            </a>
+            <a
+                href="/media/news/3799-cadi-archevnebze-da-moige-tesla"
+                class="btn  ml-3 line-height-1-7 px-3 d-none d-lg-inline-flex btn-success btn-with-icon  align-items-center text-uppercase"
+            >
+                <i class="icon-tesla font-size-5 mr-2"></i>
+                <span>მოიგე ტესლა</span>
             </a>
 
 
