Fix button link on mobile and tablet.

--- a/web/themes/custom/girchi/templates/pages/page-election-2020.html.twig
+++ b/web/themes/custom/girchi/templates/pages/page-election-2020.html.twig
@@ -19,7 +19,7 @@
                 <!-- Visible On Mobile -->
                 <div class="d-flex d-sm-none">
                     <a
-                        href="#"
+                        href="/front"
                         class="btn ml-1 ml-sm-4 py-1 line-height-1-2 px-3 btn-warning font-size-1 font-size-md-3 btn-with-icon d-lg-none d-inline-flex align-items-center text-uppercase"
                     >
                         <i class="icon-girchi-logo font-size-4 mr-2 "></i>
@@ -38,7 +38,7 @@
                 <!-- Visible On Tablet -->
                 <div class="d-none d-sm-flex">
                     <a
-                        href="#"
+                        href="/front"
                         class="btn ml-1 ml-sm-4 px-3 btn-warning font-size-1 font-size-md-3 btn-with-icon d-lg-none d-inline-flex align-items-center text-uppercase"
                     >
                         <i class="icon-girchi-logo font-size-4 mr-2 "></i>
