Change appearance of top referrals block.

--- a/web/themes/custom/girchi/templates/forms/form--user-form.html.twig
+++ b/web/themes/custom/girchi/templates/forms/form--user-form.html.twig
@@ -74,6 +74,7 @@
                                 title="ქალაქი"
                                 class="selectpicker form-control form-control-lg pr-0"
                                 data-style="btn-lg btn-block"
+                                data-size = "10"
                             >
                                 {% for key, region in regions %}
                                     {% if region.children is not null %}
