--- a/web/modules/custom/girchi_leaderboard/templates/lead-partners.html.twig
+++ b/web/modules/custom/girchi_leaderboard/templates/lead-partners.html.twig
@@ -12,7 +12,7 @@
                     role="tab"
                     aria-controls="lead"
                     aria-selected="true"
-                >{{ "Top partners" |t }}</a
+                >{{ "Partners" |t }}</a
                 >
             </li>
             <li class="nav-item col-6">
@@ -24,7 +24,7 @@
                     role="tab"
                     aria-controls="ref"
                     aria-selected="false"
-                >{{ "Top referrals" |t}}</a
+                >{{ "Referrals" |t}}</a
                 >
             </li>
         </ul>
@@ -344,7 +344,7 @@
                     class="modal-title font-size-3 text-uppercase font-weight-bold"
                     id="supportersTitle"
                 >
-                    {{ 'Top partners' | t }}
+                    {{ 'Partners' | t }}
                 </h5>
                 <button
                     type="button"
@@ -442,7 +442,7 @@
                     class="modal-title font-size-3 text-uppercase font-weight-bold"
                     id="supportersTitle"
                 >
-                    {{ 'Top partners' | t }}
+                    {{ 'Partners' | t }}
                 </h5>
                 <button
                     type="button"
@@ -540,7 +540,7 @@
                     class="modal-title font-size-3 text-uppercase font-weight-bold"
                     id="supportersTitle"
                 >
-                    {{ 'Top partners' | t }}
+                    {{ 'Partners' | t }}
                 </h5>
                 <button
                     type="button"
@@ -639,7 +639,7 @@
                     class="modal-title font-size-3 text-uppercase font-weight-bold"
                     id="supportersTitle"
                 >
-                    {{ 'Top partners' | t }}
+                    {{ 'Partners' | t }}
                 </h5>
                 <button
                     type="button"
