--- a/web/modules/custom/girchi_leaderboard/templates/lead-partners.html.twig
+++ b/web/modules/custom/girchi_leaderboard/templates/lead-partners.html.twig
@@ -2,7 +2,7 @@
     class="card mt-3 mt-sm-4 mt-md-0 mt-lg-4 font-size-3"
 >
     <div class="p-0 py-md-0 px-xl-4 row font-size-1">
-        <ul class="nav nav-tabs" id="myTab" role="tablist">
+        <ul class="nav nav-tabs w-100" id="myTab" role="tablist">
             <li class="nav-item col-6" >
                 <a
                     class="nav-link font-weight-bold text-uppercase active"
