--- a/web/modules/custom/girchi_users/templates/girchi-users.html.twig
+++ b/web/modules/custom/girchi_users/templates/girchi-users.html.twig
@@ -2,6 +2,7 @@
 
 </div>
 <div class="card">
+
     <div class="card-body overflow-hidden p-3 py-md-4 px-md-4">
         <div class="row">
             <div class="col-xs-12 col-md-8 col-lg-6 m-auto">
@@ -17,7 +18,7 @@
         </div>
         <div class="row">
             <div class="col-xs-12 col-md-7 col-lg-4 m-auto">
-                <form class="my-4">
+                <form class="my-4 auth-form" >
                     <input type="hidden" value="{{ uid }}" name="uid" id="userid">
                     <div class="form-group">
                         <label class="form-label" for="password">{{ 'Password'|t }}</label>
@@ -38,6 +39,80 @@
                                 placeholder="{{ 'Enter password'|t }}"
                         />
                     </div>
+                    <div class="form-group">
+                        <label class="form-label" for="name">{{ 'Name'|t }}</label>
+                        <input
+                            type="text"
+                            class="form-control form-control-lg"
+                            id="name"
+                            placeholder="{{ 'Enter name'|t }}"
+                        />
+                    </div>
+                    <div class="form-group">
+                        <label class="form-label" for="last-name">{{ 'Last Name'|t }}</label>
+                        <input
+                            type="text"
+                            class="form-control form-control-lg"
+                            id="last-name"
+                            placeholder="{{ 'Enter last name'|t }}"
+                        />
+                    </div>
+                    <div class="form-group">
+                        <label class="form-label" for="id-number">{{ 'ID number'|t }}</label>
+                        <input
+                            type="number"
+                            class="form-control form-control-lg"
+                            id="id-number"
+                            placeholder="{{ 'Enter ID number'|t }}"
+                            minlength="11"
+                        />
+                    </div>
+                    <div class="form-group int-phone-parent">
+                        <label class="form-label" for="phone-number">{{ 'Phone number'|t }}</label>
+                        <input
+                            type="text"
+                            class="form-control form-control-lg int-phone"
+                            id="phone-number"
+                            placeholder="{{ 'Enter phone number'|t }}"
+                        />
+                    </div>
+                    <div class="form-group mb-2">
+                        <label class="form-label" for="last-name"
+                        >{{ 'City/Region' | t}}</label
+                        >
+                        <select
+                            name="country"
+                            id="country"
+                            multiple
+                            data-max-options="1"
+                            title="ქალაქი"
+                            class="selectpicker form-control form-control-lg pr-0"
+                            data-style="btn-lg btn-block"
+                        >
+                            {% for region in regions %}
+                                {% if region.children is not empty %}
+                                    <optgroup value = {{ region.tid }} label="{{ region.name }}">
+                                        {% for sub_region in region.children %}
+                                            <option value="{{ sub_region.tid }}">{{ sub_region.name }}</option>
+                                        {% endfor %}
+                                    </optgroup>
+                                {% else %}
+                                    <option value="{{ region.tid }}">{{ region.name }}</option>
+                                {% endif %}
+                            {% endfor %}
+                        </select>
+                        <span class="validation-message"></span>
+                    </div>
+                    <div class="form-group">
+                        <label class="form-label" for="password">{{ 'Facebook url'|t }}</label>
+                        <input
+                            type="text"
+                            class="form-control form-control-lg"
+                            id="facebook-url"
+                            placeholder="{{ 'Enter Facebook url'|t }}"
+                        />
+                    </div>
+
                     <button
                             id="create-pass"
                             type="submit"
