Save referral on fb registration submit.

--- a/web/modules/custom/girchi_users/templates/girchi-users.html.twig
+++ b/web/modules/custom/girchi_users/templates/girchi-users.html.twig
@@ -123,7 +123,7 @@
                         </p>
                         <div class="form-group">
                             <select
-                                id="selected-option-tbc-single"
+                                id="referral"
                                 source-type="tbc-single"
                                 class="select w-100"
                                 data-live-search="true"
