--- a/web/themes/custom/girchi/templates/forms/form--user-register-form.html.twig
+++ b/web/themes/custom/girchi/templates/forms/form--user-register-form.html.twig
@@ -82,6 +82,12 @@
                                     >
                                     {{ element.field_facebook_url }}
                                 </div>
+                                <div class="form-group">
+                                    <label class="form-label" for="name"
+                                    >{{ 'Instagram url'|t }}</label
+                                    >
+                                    {{ element.field_instagram_url }}
+                                </div>
                                 <div class="form-group mb-2">
                                     <label class="form-label" for="last-name"
                                     >{{ "Region" | t }}</label
